terraform/k8s/04-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: payment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 584499610838.dkr.ecr.us-west-2.amazonaws.com/payment-backend:1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

          securityContext:
            runAsNonRoot: true
            runAsUser: 1000

          # Cloud health checks
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3

          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"

          # DB connection from ConfigMap & Secret
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: payment
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
